Fix unnecessary horizontal scrollbar

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,7 @@
 
 body {
   background-color: #efefef;
+  overflow-x: hidden;
 }
 
 .card {
